<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MommysLittleHelper</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">526830324082792</string>
    <string name="please_login">Please Login</string>
    <string name="fed_baby">Fed Baby</string>
    <string name="sleeping_baby">Sleeping Baby</string>
    <string name="waking_baby">Baby Waking Up</string>
    <string name="diaper_change">Diaper Change</string>
    <string name="sign_out_user">Sign Out</string>
    <string name="food_description">Child Ate:</string>
    <string name="time_fed">Time Fed:</string>
    <string name="submit">Submit</string>
    <string name="baby_events">Baby Events</string>
    <string name="breast_pump">Breast Pump</string>
    <string name="right_breast">Right Breast</string>
    <string name="left_breast">Left Breast</string>
    <string name="ounces">OZ.</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="upload_using_picasa">Upload Using Picasa</string>
    <string name="upload_using_facebook">Upload Using Facebook</string>
	<string name="app_id">526830324082792</string>
	<string name="ok">OK</string>
	<string name="successfully_posted_post">Photo Successfully Posted</string>
	<string name="error">Error</string>
	<string name="success">Success</string>
	<string name="photo_post">Photo Post</string>
	<string name="take_photo">Take Photo</string>
	<string name="choose_from_gallery">Choose From Gallery</string>
	<string name="select_picture">Select Picture</string>
	<string name="error_dialog_button_text">OK</string>
	<string name="error_dialog_title">Something Went Wrong</string>
	<string name="progress_dialog_text">Announcing, please wait...</string>
	<string name="result_dialog_text_with_id">Posted Open Graph Action, id: %1$s</string>
	<string name="result_dialog_text_default">Post action complete</string>
	<string name="result_dialog_text_cancelled">Post cancelled.</string>
	<string name="result_dialog_button_text">Thanks!</string>
	<string name="result_dialog_title">Result</string>
	<string name="error_dialog_default_text">No response from server</string>
	<string name="error_authentication_retry">An error occured %1$s</string>
	<string name="error_authentication_reopen">Please re-login</string>
	<string name="error_permission">Permission to post?</string>
	<string name="error_server">The server is busy, please retry later</string>
	<string name="error_bad_request">Please contact developer with message: %1$s</string>
	<string name="error_unknown">Unknown error</string>
	<string name="cancelled">Cancelled</string>
	<string name="permission_not_granted">Unable to perform selected action because permissions were not granted</string>
	<string name="hello_user">Hello %1$s!</string>
	
</resources>
