<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal" 
    android:paddingTop="50dp">

    <Button
        android:id="@+id/fedBaby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fed_baby" />

    <Button
        android:id="@+id/babySleeping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sleeping_baby" />

    <Button
        android:id="@+id/babyWaking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waking_baby" />
    
    <Button
        android:id="@+id/changedDiaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diaper_change" />
    
    <Button 
        android:id="@+id/signingOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out_user"/>

</LinearLayout>
