<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
                android:id="@+id/fedBabyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fed_baby"
                android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/foodDescriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/foodDescriptionSubmit"
                android:text="@string/food_description" />

            <EditText
                android:id="@+id/foodDescriptionSubmit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/foodDescriptionTitle"
                android:inputType="textMultiLine" />
        </RelativeLayout>
        
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/timeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_fed" />

            <Button
                android:id="@+id/timeSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="Change Time" />
        </RelativeLayout>
    
    
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <Button
            android:id="@+id/submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:text="@string/submit" />
            
        </RelativeLayout>
 
</LinearLayout>
